@@ -92,9 +92,6 @@ endif # build versions empty
 
 # Declare Build-Deps for packages using this file
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), cdbs (>= 0.4.43)
-ifdef _cdbs_rules_debhelper
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), debhelper (>= 5.0.37.2)
-endif
 ifeq (all, $(cdbs_python_module_arch))
   ifneq (, $(cdbs_python_compile_version))
     CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python$(cdbs_python_compile_version)-dev, python (>= 2.3.5-11)
@@ -105,7 +102,7 @@ else
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-all-dev (>= 2.3.5-11)
 endif
 ifeq (pysupport, $(DEB_PYTHON_SYSTEM))
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-support (>= 0.3.2)
+CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-support (>= 0.5.2)
 else
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-central (>= 0.5.6)
 endif
@@ -149,7 +146,6 @@ ifeq (pysupport, $(DEB_PYTHON_SYSTEM))
 else
 	dh_pycentral -p$(cdbs_curpkg)
 endif
-	dh_python -p$(cdbs_curpkg) $(DEB_DH_PYTHON_ARGS)
 
 
 # clean stage
